# cuda_cudarc_test

./: README.md
cpu/: Cargo.toml  README.md  build.rs
cpu/benches/: plonk_benchmark.rs
cpu/src/: lib.rs
cpu/src/cpu_control/: exec.rs  future_cuda.rs  mod.rs
cpu/src/cuda_cpi/: demo.rs  mod.rs
gpu/: Cargo.toml
gpu/src/: lib.rs
